--- a/plugins/template/manifest.json
+++ b/plugins/template/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Template Plugin",
+    "name": "testuje",
     "description": "A plugin for use as a template.",
     "authors": [
         {
